--- a/src/index.html
+++ b/src/index.html
@@ -3,14 +3,12 @@
 <head>
   <meta charset="utf-8">
   <title>CBT Exam Panel</title>
-  <base href="/cbt-exam">
+  <!-- ng build --prod --base-href /cbt-admin/ -->
+  <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <script src="https://apis.google.com/js/platform.js"></script> 
-
 </head>
-<body>
+<body oncontextmenu = "return false;">
   <app-root></app-root>
 </body>
 </html>
